m/k/coder-amanibhavam-district-cluster-deathstar/resource-ciliumnetworkpolicy-deathstar-blueprints.yaml
#ManagedBy: cue

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deathstar-blueprints
spec:
  endpointSelector:
    matchLabels:
      class: deathstar
      org: empire
  ingress:
    - fromEndpoints:
        - matchLabels:
            org: alliance
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: PUT
                path: /v1/exhaust-port$
                headers:
                  - 'X-Has-Force: True'
    - fromEndpoints:
        - matchLabels:
            org: empire
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /v1/
